Fix alignment

--- a/css/index_responsive.css
+++ b/css/index_responsive.css
@@ -77,7 +77,6 @@ section{
   font-size: 17px;
   color: #fff;
   font-weight: 400;
-  padding-left: 18px;
 }
 
 /**********************************
@@ -297,7 +296,6 @@ section{
   font-size: 25px;
   color: #fff;
   font-weight: 400;
-  padding-left: 18px;
 }
 /**********************************
 Main Styling
